Opened 3 years ago
Closed 2 years ago
#17862 closed bug (fixed)
HaikuDepot crashes regularly when user addins are disabled
Reported by: | Uityyy | Owned by: | apl-haiku |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta4 |
Component: | Applications/HaikuDepot | Version: | R1/beta3 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
HaikuDepot crashes with a segment violation in function BBitmap:Bounds(BBitmap) when it attempts to render information on certain packages while user addons are disabled.
Steps to reproduce:
- Boot Haiku r1beta3 with the shift key held down and turn on "Disable user addos" in the Safemode Options.
- Open HaikuDepot.
It crashes part way through loading the All packages list. You can also crash it by selecting Featured packages>Games. Only certain packages trigger this crash. Under Featured packages>Audio the crash does not occur until you scroll down.
As of 2022-08-10, BeLife can be used as an example of a package with the "right" image/metadata to trigger this crash.
I have reproduced this directly from the r1beta3 x86 install ISO in VirtualBox and on a real-hardware install after running pkgman full-sync
but have not checked other architectures.
Attachments (1)
Change History (6)
by , 3 years ago
Attachment: | HaikuDepot-759-debug-09-08-2022-22-47-42.report added |
---|
comment:1 by , 3 years ago
Please, check with a nightly iso. I think that this bug has been corrected already there. When disabling user-addons it was disabling also the system ones. IIRC this was causing problem with StyleEdit as well.
comment:3 by , 3 years ago
I was thinking the solution would just be for HaikuDepot to have a fallback better than "Segmentation violation" whan an image couldn't be properly parsed. That's probably good practice even if there aren't known instances of unparsable data, but if #17698 is resolved in a way that makes everything parse even with addons disabled, that would make the issue moot.
comment:5 by , 2 years ago
Milestone: | Unscheduled → R1/beta4 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Fixed in hrev56393.
Stack trace from real hardware